# cs2-body-head-detection

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  setup.cfg
.dvc/: config
configs/: config.yaml
configs/checkpoint/: default.yaml
configs/data/: data.yaml
configs/export/: default.yaml
configs/inference/: default.yaml
configs/logging/: default.yaml
configs/model/: default.yaml
configs/training/: default.yaml
cs2-body-head-detection/: dataset.py  main.py  train.py  utils.py
cs2_body_head_detection/: dataset.py  infer.py  main.py  train.py  utils.py
scripts/: convert_tensorrt.py  export_onnx.py
